[project]
name = "lektor-markdown-ruby-blocks"
version = "0.2.1"
authors = [
    { name = "25349023", email = "25349023.qq@gmail.com" },
]
description = "Add supports for ruby blocks syntax in Markdown"
long_description = { file = "README.md" }
long_description_content_type = "text/markdown"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points."lektor.plugins"]
markdown-ruby-blocks = 'lektor_markdown_ruby_blocks:RubyBlockPlugin'

[project.urls]
"Homepage" = "https://github.com/25349023/lektor-markdown-ruby-blocks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

