[project]
name = "lektor-markdown-ruby-blocks"
version = "0.2.4"
authors = [
    { name = "25349023", email = "25349023.qq@gmail.com" },
]
description = "Introduces a new syntax to Markdown for generating HTML ruby tags"
long_description = { file = "README.md" }
long_description_content_type = "text/markdown"
keywords = ["Lektor", "plugin", "Markdown", "HTML", "ruby-tag"]
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Lektor",
    "Environment :: Web Environment",
    "Environment :: Plugins"
]

[project.entry-points."lektor.plugins"]
markdown-ruby-blocks = 'lektor_markdown_ruby_blocks:RubyBlockPlugin'

[project.urls]
"Homepage" = "https://github.com/25349023/lektor-markdown-ruby-blocks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

